# BLAKE2

./: .vvignores  BLAKE2.sln  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  fulltest.sh
BLAKE2/: BLAKE2.vcxproj  BLAKE2.vcxproj.filters  CMakeLists.txt
BLAKE2/include/: BLAKE2.h
BLAKE2/src/: BLAKE2.cpp  config.h.in  internal.h
Reference/2B/: 2B.vcxproj  2B.vcxproj.filters
Reference/src/: blake2.h  blake2b-ref.c
TestBLAKE2/: CMakeLists.txt  TestBLAKE2.vcxproj  TestBLAKE2.vcxproj.filters
TestBLAKE2/src/: TestVector.cpp  TestVector.h  common.h  main.cpp  manips.h  test-blake2.cpp
include/: BLAKE2.h  BLAKE2.hpp
src/: BLAKE2.cpp  CMakeLists.txt  config.h.in
test/: CMakeLists.txt  TestVector.cpp  TestVector.h  common.h  main.cpp  manips.h  precomp.cpp  test-blake2.cpp
